--- a/js/index.html
+++ b/js/index.html
@@ -3,6 +3,7 @@
 <head>
    
     <title>document.write</title>
+    <link rel="stylesheet" href="style/.css">
 </head>
 <body>
     <h1>Olá !!!!!!!!!!!! document.write</h1>
